# Psy-dsm

./: .gitignore  Dockerfile  LICENSE  README.md  TODO.md  cloudbuild.yaml  gemini.md  pyproject.toml  readme.md  run_app.py
db/: index.yaml
docs/: CHCModel.md  Hexa3DAssessment.md  HollandCodeAssessment.md  TheoriesComparison.md
evaluation/: evaluate_character_profile.py  simple_evaluate.py
jules-scratch/: create_visualizations_example.py
jules-scratch/verification/: verify_holland_code.py  verify_ui.py
scripts/: generate_schema.py
spec/: chat_profile_generation.md
specs/: standard_profile_generation.md
src/app/: agent.py  batch.py  character_index_service.py  chc_models.py  comparison_service.py  crm.py  dashboard.py  database.py  datastore_service.py  firestore_service.py  gemini_services.py  local_file_service.py  main.py  models.py  psychometry_chc_generate.py  services.py  state.py  user_models.py  visualizations.py
src/app/pages/: 01_Customer_Selection.py  02_Customer_Dashboard.py  03_Generate_Profile.py  04_Compare_Profiles.py  05_Combine_Profiles.py  06_User_Profile.py
src/app/prompts/: hexa3d.md  riasec.md  tcc.md
terraform/: README.md  main.tf  outputs.tf  prod.tfvars.example  staging.tfvars.example  variables.tf
tests/: test_app.py  test_batch.py  test_hexa3d.py  test_pages.py  test_quality.py  test_services.py  test_visualizations.py
